compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_unit_unit.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:unit(2)-unit(5)>> x"

---

error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:21
  │
1 │ let x = <<1:unit(2)-unit(5)>> x
  │                     ^^^^^^^ This is an extra unit specifier.

Hint: A BitString segment can have at most 1 unit.
See: https://gleam.run/book/tour/bit-strings.html

